# rabbit

./: README.md
backend/: .gitignore  package-lock.json  package.json
backend/prisma/: dev.db
backend/src/: index.ts
frontend/: package-lock.json  package.json
frontend/components/: Header.tsx  Layout.tsx  Upload.tsx
frontend/pages/: create.tsx  drafts.tsx  index.tsx  signup.tsx
frontend/pages/p/: [id].tsx
pattern-synth/: Cargo.toml
pattern-synth/src/: lib.rs
