[package]
name = "pattern-synth"
version = "0.1.0"
edition = "2021"

[dependencies]
node-bindgen = { version = "4.0" }
texture-synthesis = "0.8.2"
log = "0.4.14"
log-panics = "2.0"
libc = "0.2"
core-foundation = "0.9.3"
stdweb = "0.4.1"
futures = "0.3"
async-std = { version = "1.2", features = ["attributes"] }
rand = "0.7.0"
rust-s3 = "0.29"

[build-dependencies]
node-bindgen = { version = "4.0", features = ["build"] }

[lib]
crate-type = ["cdylib"]